repositories/architecture/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: grafana
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
  - name: grafana
    protocol: TCP
    port: 80
    targetPort: 3000
